k8s/service-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  namespace: nodejs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: my-node-microservice
        image: ilyas0v/my-node-microservice:6
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: nodejs-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: service-b
